--- a/style/css/page-css/vacancies.css
+++ b/style/css/page-css/vacancies.css
@@ -1,5 +1,5 @@
 .vacancy-bg{
-    background-image: url(../../images/bg-test2.jpg);
+    background-image: url(../../images/vacancy-bg.jpg);
 }
 
 .card .user-result{
