--- a/style/css/page-css/takehome.css
+++ b/style/css/page-css/takehome.css
@@ -1,3 +1,6 @@
+/* takehome.css - CSS for takehome.html specififcally */
+
+/* background image for form section */
 .takehome-bg{
     background-image: url(../../images/takehome-bg.jpg);
 }
