--- a/style/css/page-css/index.css
+++ b/style/css/page-css/index.css
@@ -1,9 +1,13 @@
+/* index.css - CSS for index.html specififcally */
+
+/* CSS for mobile-view cards */
 .card-img-short {
     width: 100%;
     height: 45vw;
     object-fit: cover;
 }
 
+/* set animated elements to 0 opacity for fade-in animation */
 #d-takehome-text, #d-vacancy-text, #m-vacancy-text, #m-takehome-text{
     opacity: 0;
 }
